2009-09-10  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.65

	Revert the fix for NB#122341, it causes a regression.

2009-09-10  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.64

2009-09-10  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#134557 Rotation suffers from too early mapping

	nivea2g

	* matchbox/core/mb-wm-types.h
	* matchbox/core/mb-wm-atoms.c:
	  Added _HILDON_PORTRAIT_MODE_REQUEST.
	* matchbox/core/mb-wm-client-window.h:
	  Added MBWMClientWindow::portrait_on_map.
	* matchbox/core/mb-wm-client-window.c:
	  Get the value of this property when the client is registerd
	  (but don't keep it updated).
	* matchbox/core/mb-wm-client.h
	* matchbox/core/mb-wm-client.c:
	  mb_wm_client_wants_portrait() added.
	* matchbox/core/mb-window-manager.h:
	  MBWindowManagerSignalPortraitForecast added.
	* matchbox/core/mb-window-manager.c:
	  * mb_wm_manage_client(): if mb_wm_client_wants_portrait()
	    don't activate it but emit the signal.
	  * mb_wm_handle_root_config_notify(): 
	    Activate the first unmapped portrait-desiring client it finds.
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_display_sync):
	  Don't move-resize unshown clients.

2009-09-09  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#119749 - Redundant exposure causing glitches on rotation
	
	* matchbox/core/mb-window-manager.c
	* matchbox/core/mb-window-manager.h: emit a signal 
	  MBWindowManagerSignalRootConfigure when the root window gets 
	  reconfigured (picked up by hildon-desktop). And ignore a
	  root configure if we just got reconfigured to the same
	  size as before.

2009-09-09  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_maybe_redirect): New function to possibly
	redirect clients before they are reparented to the frame.
	* matchbox/comp-mgr/mb-wm-comp-mgr.[ch]: Add maybe_redirect class
	function for the above.